# django-for-runners

./: .env_prod_sample  .gitignore  Makefile  README.creole  gulpfile.js  manage.py  package-lock.json  package.json  pyproject.toml
for_runners/: version.py
for_runners_project/: settings.py
