[tool.poetry]
name = "for_runners"
version = "0.11.0"
description = "Django for Runners"
license = "GPL-3.0-only"
authors = ["Jens Diemer", "Sr. Rolando"]
readme = "README.creole"
homepage = "https://github.com/jedie/django-for-runners"

[tool.poetry.dependencies]
python = "^3.5"
django = "~2.1"                     # FIXME We should be updating this. v3 has been out for a while now.
django-tools = ">=0.45.3"           # https://github.com/jedie/django-tools
django-environ = "0.4.5"            # https://github.com/joke2k/django-environ
autotask = "^0.5.4"                 # https://bitbucket.org/kbr/autotask
psycopg2 = "^2.8.4"                 # https://www.psycopg.org/

#-e git+https://github.com/tkrajina/gpxpy.git@dev#egg=gpxpy
gpxpy = ">=1.3.2"                   # https://github.com/tkrajina/gpxpy
#Gpxity                             # https://github.com/wrohdewald/Gpxity
python-tcxparser = "^1.1.0"         # https://github.com/vkurup/python-tcxparser

matplotlib = "^3.0.3"               # http://matplotlib.org/
svgwrite = "^1.3.1"                 # http://github.com/mozman/svgwrite.git
geopy = "^1.21.0"                   # https://github.com/geopy/geopy
gunicorn = "^19.7.1"                # https://gunicorn.org/
django-import-export = "^2.0.2"     # https://github.com/django-import-export/django-import-export
colorlog = "^4.1.0"                 # https://github.com/borntyping/python-colorlog
django-debug-toolbar = "^2.2"       # http://django-debug-toolbar.readthedocs.io/en/stable/changes.html

[tool.poetry.dev-dependencies]
tox = "*"
python-creole = ">=v0.8"
django-dynamic-fixtures = "^0.2.1"  # https://github.com/Peter-Slump/django-dynamic-fixtures
pytest-django = "^3.9.0"
pytest-cov = "^2.8.1"
selenium = "^3.141.0"
pip-tools = "^4.5.1"
# black = "*"
autopep8 = "^1.5.1"                 # https://github.com/hhatto/autopep8
wheel = "^0.34.2"
twine = "^1.15.0"
docutils = "^0.16"
